--- a/app/globals.css
+++ b/app/globals.css
@@ -64,6 +64,51 @@
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
   }
+
+  :root {
+    --background: 30 100% 95%;
+    --foreground: 30 5% 0%;
+    --card: 30 50% 90%;
+    --card-foreground: 30 5% 10%;
+    --popover: 30 100% 95%;
+    --popover-foreground: 30 100% 0%;
+    --primary: 30 84% 70.6%;
+    --primary-foreground: 0 0% 0%;
+    --secondary: 30 30% 70%;
+    --secondary-foreground: 0 0% 0%;
+    --muted: -8 30% 85%;
+    --muted-foreground: 30 5% 35%;
+    --accent: -8 30% 80%;
+    --accent-foreground: 30 5% 10%;
+    --destructive: 0 100% 30%;
+    --destructive-foreground: 30 5% 90%;
+    --border: 30 30% 50%;
+    --input: 30 30% 18%;
+    --ring: 30 84% 70.6%;
+    --radius: 0.5rem;
+  }
+  .dark {
+    --background: 30 50% 5%;
+    --foreground: 30 5% 90%;
+    --card: 30 50% 0%;
+    --card-foreground: 30 5% 90%;
+    --popover: 30 50% 5%;
+    --popover-foreground: 30 5% 90%;
+    --primary: 30 84% 70.6%;
+    --primary-foreground: 0 0% 0%;
+    --secondary: 30 30% 10%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: -8 30% 15%;
+    --muted-foreground: 30 5% 60%;
+    --accent: -8 30% 15%;
+    --accent-foreground: 30 5% 90%;
+    --destructive: 0 100% 30%;
+    --destructive-foreground: 30 5% 90%;
+    --border: 30 30% 18%;
+    --input: 30 30% 18%;
+    --ring: 30 84% 70.6%;
+    --radius: 0.5rem;
+  }
 }
 
 @layer base {
